RESOLVED FIXED269269
AX: [iOS] Date fields shouldn't send focused change notification when picker popup is presented
https://bugs.webkit.org/show_bug.cgi?id=269269
Summary AX: [iOS] Date fields shouldn't send focused change notification when picker ...
Hyongsop Kim
Reported 2024-02-12 22:09:38 PST
When interacting with an HTML input of type date on WebKit browsers, VoiceOver reads the element as a popup button to open the date popup. However, upon activation, focus does not shift to the date list popup, impairing navigational accessibility. Additionally, attempting to swipe right with one finger to move the focus within the popup results in the popup closing automatically, rather than allowing the user to explore the date selections. This behavior necessitates an extra step of touching the popup area to initiate exploration, which poses a significant barrier to accessibility. A sample page demonstrating this issue is available at https://khsruru.com/wp-content/date.html, highlighting the need for improved focus management and interaction handling within VoiceOver and WebKit to ensure accessible web experiences for all users. Steps to Reproduce: Enable VoiceOver on a WebKit browser. Navigate to the sample page provided. Activate the date input field. Observe that focus does not move to the popup and swiping right closes the popup instead of navigating within it. Expected Behavior: Upon activating the date input, VoiceOver should move focus to the date selection popup, allowing users to navigate between dates using swipe gestures without the popup closing unexpectedly. Actual Behavior: Focus remains on the initial button, and swiping right results in the popup closing, preventing accessible navigation of date options. This report outlines a critical accessibility concern that needs addressing to ensure that web applications are inclusive and fully usable for VoiceOver users.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-12 22:09:48 PST
Joshua Hoffman
Comment 2 2025-10-03 10:18:34 PDT
*** Bug 300119 has been marked as a duplicate of this bug. ***
Joshua Hoffman
Comment 3 2025-10-03 10:39:49 PDT
EWS
Comment 4 2025-10-06 06:28:56 PDT
Committed 301057@main (8c8a97961d8b): <https://commits.webkit.org/301057@main> Reviewed commits have been landed. Closing PR #51765 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.